[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/Dialog/show_character_name_dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/Dialog/Fonts/NotoSansCJKtc-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.196078, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = SubResource( 2 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[sub_resource type="InputEventKey" id=8]
scancode = 16777221

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[node name="show_character_name_dialog" type="Panel"]
margin_right = 328.0
margin_bottom = 118.0
rect_min_size = Vector2( 328, 118 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 312.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center][color=red]SHOW A CHARACTER NAME[/color][/center]"
text = "SHOW A CHARACTER NAME"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 312.0
margin_bottom = 38.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Select a character:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 312.0
margin_bottom = 73.0
mouse_default_cursor_shape = 2
theme = SubResource( 6 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 312.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 26 )
alignment = 2

[node name="OK_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 223.0
margin_top = 3.0
margin_right = 254.0
margin_bottom = 23.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
shortcut = SubResource( 9 )
text = "OK"

[node name="Cancel_Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 258.0
margin_top = 3.0
margin_right = 312.0
margin_bottom = 23.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
text = "Cancel"
[connection signal="visibility_changed" from="." to="." method="_on_emit_signal_dialog_visibility_changed"]
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/OK_Button" to="." method="_on_OK_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/Cancel_Button" to="." method="_on_Cancel_Button_button_down"]
